--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
 <body>
 
-
-
     <div id="root">
         <div id="main">
 
@@ -141,162 +139,162 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">2</span>
+                                        <span class="volume">2</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1507.9 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.0 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">50</span>
+                                        <span class="volume">50</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">20</span>
+                                        <span class="volume">20</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1507.7 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.1 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">11</span>
+                                        <span class="volume">11</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">1</span>
+                                        <span class="volume">1</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1507.5 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.2 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">14</span>
+                                        <span class="volume">14</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">1</span>
+                                        <span class="volume">1</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1507.3 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.3 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">49</span>
+                                        <span class="volume">49</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">104</span>
+                                        <span class="volume">104</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1507.1 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.4 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">12</span>
+                                        <span class="volume">12</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">5</span>
+                                        <span class="volume">5</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1507.0 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.5 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">11</span>
+                                        <span class="volume">11</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">1</span>
+                                        <span class="volume">1</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1506.9 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.6 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">29</span>
+                                        <span class="volume">29</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">2</span>
+                                        <span class="volume">2</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1506.5 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.7 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">2</span>
+                                        <span class="volume">2</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">3</span>
+                                        <span class="volume">3</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1506.3 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span> 1508.8 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">3</span>
+                                        <span class="volume">3</span>
                                     </td>
                                 </tr>
                                 <tr>
                                     <td>
-                                        <span class="volume-buy">1</span>
+                                        <span class="volume">1</span>
                                     </td>
                                     <td class="txt-red seperate-volume-percent seperate-price">
                                         <span> 1506.1 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-buy"></div>
                                     </td>
                                     <td class="txt-red seperate-volume-percent">
                                         <span></span> 1508.9 </span>
-                                        <div class="volume-percent"></div>
+                                        <div class="volume-percent-sell"></div>
                                     </td>
                                     <td>
-                                        <span class="volume-sell">116</span>
+                                        <span class="volume">116</span>
                                     </td>
                                 </tr>
                             </tbody>
